# ai_engineering

./: .cursorrules  .gitignore  CLAUDE-CODE-PROMPTS.md  CLAUDE-WORKFLOW-GUIDE.md  CLAUDE.md  README.md  requirements.txt
.claude/skills/: python-learning-skill.md  teaching-materials-skill.md
python-learning/: README.md
python-learning/concepts/decorators/: README.md  examples.py
python-learning/references/: quick-reference.md
research/: README.md
week-01-llm-foundations/: README.md
week-01-llm-foundations/notebooks/: README.md  lm_playground_completed.ipynb
week-01-llm-foundations/project-01-llm-playground/: pyproject.toml
week-01-llm-foundations/project-01-llm-playground/part1_jupyter/: part1_course_solution.py
week-01-llm-foundations/project-01-llm-playground/part2_webapp/: README.md
week-01-llm-foundations/project-01-llm-playground/part2_webapp/backend/: main.py
week-01-llm-foundations/project-01-llm-playground/part2_webapp/frontend/: LLMPlayground.jsx
week-01-llm-foundations/teaching-materials/demos/: attention_demo.py  data_cleaning_demo.py  evaluation_demo.py  model_parameters_demo.py  model_training_demo.py  neural_networks_demo.py  pretraining_simulation.py  rl_demo.py  sft_demo.py  simple_crawler_demo.py  system_design_demo.py  tokenization_demo.py  tokenization_example.py  weight_adjustment_simple.py
week-01-llm-foundations/teaching-materials/guides/: attention-teaching-guide.md  rl-guide.md  (+14 more)
week-02-rag-prompting/: README.md
week-03-agents-tools/: README.md
week-04-reasoning-research/: README.md
week-05-multimodal/: README.md
