[project]
name = "llm-playground"
version = "0.1.0"
description = "Interactive LLM text generation playground"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
